--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   "dependencies": {
     "@hookform/error-message": "^2.0.1",
     "@reduxjs/toolkit": "^2.2.1",
+    "@types/date-fns": "^2.6.0",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
+    "date-fns": "^3.3.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.2.0",
     "next": "14.1.0",
     "react": "^18",
+    "react-datepicker": "^6.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-datepicker": "^6.0.3",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
